# cuistax

./: .gitignore  CMakeLists.txt  README.md  compile.sh
apps/: CMakeLists.txt
apps/fps_demo/: CMakeLists.txt  fps_demo.cxx
src/: constants.hxx  controller.cxx  controller.hxx  cuistax.hxx  main.cxx
src/base/: drawable.cxx  drawable.hxx  dynamic.cxx  dynamic.hxx  entity.hxx  resource.cxx  resource.hxx
src/core/: cuistax.hxx
src/cuistax/: cui_base.hxx  cui_debug.hxx  cui_drawables.hxx  cui_engine.cxx  cui_engine.hxx  cui_entities.hxx  cui_errors.hxx  cui_flow.hxx  cui_resource.hxx  cui_utils.hxx  cuistax.cxx  cuistax.hxx
src/datastructures/: recycler.hxx
src/drawables/: image.cxx  image.hxx  string_image.cxx  string_image.hxx
src/entities/: actor.cxx  actor.hxx  myRect.cxx  myRect.hxx  node.cxx  node.hxx  sprite.cxx  sprite.hxx
src/entities/physics/: box.cxx  box.hxx  particle.cxx  particle.hxx
src/entities/ui/: FPS_counter.cxx  FPS_counter.hxx
src/flow/: engine_loop.cxx  scene.cxx  scene.hxx  stage.cxx  stage.hxx  theatre.hxx
src/resource/: font_resource.cxx  font_resource.hxx  resource_manager.cxx  resource_manager.hxx  texture_resource.cxx  texture_resource.hxx  texture_zone_resource.cxx  texture_zone_resource.hxx
src/utils/: DrawableGroup.cxx  DrawableGroup.hxx  cui_errors.hxx  debug.hxx  formatting.hxx  timer.cxx  timer.hxx
src/utils/drawables/: DrawableGroup.cxx  DrawableGroup.hxx  TextureRect.cxx  TextureRect.hxx
src/utils/dynamics/: DynamicGroup.cxx  DynamicGroup.hxx
src/utils/entities/: EntityGroup.hxx
src/utils/graphics/: TextureRect.cxx  TextureRect.hxx
src/world/: scene.cxx
